--- a/index.html
+++ b/index.html
@@ -3,84 +3,139 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alexandra Freeman</title>
+  <title>Alexandra (Stewart) Freeman</title>
   <link rel="stylesheet" href="css/style.css">
   <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Bricolage Grotesque' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Edu NSW ACT Foundation' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Nunito Sans' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Noto Serif' rel='stylesheet'>
+
+
+
 </head>
 <body>
-  <header>
-    <p> Alexandra Freeman </p>
-    <img src="assets/images/me.png" alt="Me" width="200" height="200" align="center"/> 
-  </header>
-  <section id="overview">
-    <h1>Overview</h1>
-    <p>
-      I am passionate about advancing our understanding of complex systems through the intersection of Physics and computational techniques. I am particularly excited about interdisciplinary collaboration and am eager to apply my skills to real-world challenges in fields such as computational physics and AI Ethics. 
-    </p>
-    
-  </section>
+<div class="row">
+  <div class="column left" style="background-color:#A8B9BF;">
+
+<section id="projects" style="background-color:#DBECF3;">
+
+
+<h1 style="color:black;font-size:26px">Projects</h1>
+    <h4> Physical Meaning of Style Transfer: Physics-Informed Style Transfer for CFD simulations. </h4>
+	<p style="font-size:22px"> In this paper I propose a physical meaning for the use
+of the Gram Matrix in style transfer which extends beyond the notion of texture, 
+shape, and color on images to the relationships between feature vectors in CFD simulations. </p>
+       <center> <a href="https://github.com/astew-95/physical-style-transfer/tree/main" style="text-align:right; color:#094F74;" > Learn More </a> </center>
+
+
+     <h4> Multifidelity Modeling of Simplified SPH Simulation </h4>
+	<p style="font-size:22px"> My teammates and I propose a novel data-driven method leveraging Deep Learning to learn a physically-meaningful latent space representing higher-order simulation effects through a learned correction function. Presented as part of Scientific Machine Learning Course Symposium at the Georgia Institute of Technology.
+
+ </p>
+      <center> <a href="https://github.com/astew95/nsm_sml" style="color:#094F74;"> Learn More </a></center>
+
+ 
+     <h4> Simulation of a kilonova using Smooth-Particle-Hydrodynamics (SPH) methods </h4>
+	<p style="font-size:22px"> We leverage computational tools to produce a physically meaningful low-fidelity simulation of a Neutron Star (NS) using Smooth Particle Hydrodynamics. Presented as part of Computational Physics Course Technical Presentations at the Georgia Institute of Technology.</p>
+      <center> <a href="https://github.com/ETVincent/spring_23_computational" style="color:#094F74;"> Learn More </a></center>
+
+
+     <h4> Review Article of Neutron Star Cooling </h4>
+	<p style="font-size:22px"> I relay the most recent research on the subject of Neutron Star Cooling,
+outlining details of recent advances towards determining a NS radius and discuss the significance of prior and recent advancements for a course in High Energy Astrophysics. </p>
+      <center> <a href="https://github.com/astew-95/ns-review/tree/main" style="color:#094F74;"> Paper Repo</a></center>
+
+   </section>
+
+  <section id="Selected skills" style="background-color:#DBECF3;font-size=16px">
+ <h1 > Skills</h1>
+      <h3> Scientific Computing & Data Science Skills</h3>
+
+		<p class="boxedlarge"> PyTorch </p> 
+		<p class="boxedlarge"> TensorFlow </p> 
+		<p class="boxedlarge"> PINNs </p> 
+		<p class="boxedlarge"> PDE Solvers </p> 
+		<p class="boxedlarge"> Julia </p> 
+		<p class="boxedlarge"> Jupyter </p>
+		<p class="boxedlarge"> Spack </p> 
+		<p class="boxedlarge"> ParaView </p> 
+		<p class="boxedlarge"> C++ </p> 
+		<p class="boxedlarge"> yt </p>
+		<p class="boxedlarge"> Github/GitLab </p> 
+		<p class="boxedlarge"> Pandas </p> 
+		<p class="boxedlarge"> Web Scraping </p> 
+		<p class="boxedlarge"> Linux OS </p> 
+ 
+
+      <h3> Communication Skill</h3>  
+
+	<p class="boxedlarge"> Technical Writing </p>
+	<p class="boxedlarge"> Technical Presentation </p>
+	<p class="boxedlarge"> Teaching </p>
+	<p class="boxedlarge"> Wet Lab </p>
+<!--	<p class="boxedlarge"> Team Player </p> -->
+
+
+
+ </section>
+
+
+</div>
+  <div class="column right" style="background-color:lightgrey;">
+
+<header>
+
+<div>
+
+
+ <column> 
+<p style="font-size:40px"> Alexandra Freeman <div>
+<a href="mailto:alexastew19@gmail.com" style="color:#45B9A2;font-size:22px;">Email</a> |   <a href="https://www.linkedin.com/in/alexa-r-f/" style="color:#45B9A2;font-size:22px;">LinkedIn</a> | <a href="https://github.com/astew-95" style="color:#45B9A2;font-size:22px;">Github</a> </p>
+
+<img src="assets/images/me.png" alt="Me" width="200" height="200" align="right" style="border-radius: 50%; border: 5px solid grey; "/> </column>
+
+
+
+
+<!-- I would love to discuss research opportunities, collaboration, or advancements in computational techniques and scientific computing. Some of my projects are listed below.  --> 
+	
+
+</header>
 
   <section id="about">
     <h1>About Me</h1>
     <p>
-      As a second-year Master’s student at Georgia Institute of Technology specializing in Computational Science and Engineering, I thrive in environments where seeking opportunities to learn, collaborate, and communicate pushes the boundaries of computational science. With my home unit in Physics, I have developed a strong foundation in scientific computing, probability theory, and high-performance computing (HPC), all of which serve as critical tools in my research and academic pursuits. My current interests lie in the application of machine learning to scientific problems, as well as exploring particle-based simulations to model physical systems more effectively. Through projects and research, I aim to contribute to innovations in scientific modeling, data-driven discovery, and simulation-based optimization.
+
+I am a passionate and highly skilled researcher with a strong background in physics, computational science, and scientific computing seeking to leverage my expertise for scientific discovery. I have developed a strong interest in Physics-Informed Machine Learning, data visualization, and high-performance computing, all of which serve as critical tools in my research and academic pursuits. I seek to explore the application of machine learning to scientific problems in physics, data analysis, and predictive modeling, as well as particle-based simulations.
     </p>
   </section>
 
-  <section id="skills">
-    <h1>My skills</h1>
-      <h2> Tools & Packages </h2>
-        <p> Python, Github, MarkDown, LATEX, BASH, Linux, Jupyter Notebook, Google Colab, numpy, pandas, spack, conda C++, pytorch, tensorflow, Julia, R, MATLAB, Excel, Powerpoint.</p>
-      <h2> Communication</h2>  
-        <p>Leadership/Mentorship Skills, Lab Experience, Teaching, Excellent Presentation Skills, Excellent Communication Skills, Excellent Team Player.</p>
-      <h2> Quantitative Research </h2> 
-        <p> Mathematical optimization, quantitative/qualitative data management, machinelearning, data research methodologies, web scraping, data modelling, data visualization, statistical analysis, user research, data analysis, visualizations.</p>
-  </section>
-
- <section id="education">
+<section id="education">
    <h1>Education</h1>
-     <h2> Massachusetts Institute of Technology </h2>
-         <img src="assets/images/mit_logo.png" alt="MIT Logo" width="200" height="85" align="left"/>
-       <p> Bachelor of Science from the Department of Physics, 4.6/5.0 (Completed June 2022) </p>
+
+     <h2>  Georgia Institute of Technology </h2>
+         <!-- <img src="assets/images/gt_logo.png" alt="Georgia Tech Logo" width="170" height="80" align="left"/> -->
+       <p> <i> M.S. in Computational Science and Engineering, GPA: 3.2/4.0 (Projected August 2025) </i> </p>
+    
        <p>
         Relevant coursework: Computational Data Analytics, Numerical Linear Algebra, Modeling and Simulation,
         Scientific Machine Learning, Machine Learning Data Analytics, Computational Physics.
        </p>
-     <h2>  Georgia Institute of Technology </h2>
-          <img src="assets/images/gt_logo.png" alt="Georgia Tech Logo" width="170" height="80" align="left"/> 
-       <p> M.S. in Computational Science and Engineering, GPA: 3.2/4.0 (Projected August 2025) </p>
+
+ <h2> Massachusetts Institute of Technology </h2>
+      <!--  <img src="assets/images/mit_logo.png" alt="MIT Logo" width="200" height="85" align="left"/>  -->
+       <p > <i> Bachelor of Science from the Department of Physics, 4.6/5.0 (Completed June 2022)</i>  </p>
+
        <p> 
          Relevant coursework: Mathematics for Computer Science, Differential Equations, Linear Algebra, Python Programming and Fundamentals, 
          Introduction to Machine Learning, Fluid Dynamics, Statistical Physics, Quantum Mechanics I, Chemistry Thermodynamics, Laboratory Physics.
       </p>
    </section>
+
   
-  <section id="resume">
-    <h1>Selected Experience</h1>
-      <h3>Los Alamos National Laboratory, May 2023 — September 2023</h3>
-           <img src="assets/images/lanl_logo.png" alt="Lanl Logo" width="180" height="55" align="left"/> 
-        <p>
-          Systematically determined bugs and installation issues of Accent on Linux VM and worked closely with developers to understand user-end software outcomes.
-          Leveraged git, BASH programming, Spack, and C++ API to integrate Ascent with LANL-developed physics simulation code.
-        </p>
-      <h3>MIT Undergraduate Research Program (UROP), MIT Anderson Lab</h3>
-           <img src="assets/images/mit_logo.png" alt="MIT Logo" width="200" height="85" align="left"/>
-        <p>
-          Supported Machine Learning algorithm for discovery of new molecular candidates for laboratory work.
-          Fully trained ML model using Pytorch and other relevant ML libraries for determining training/test data, cross-validation, and testing results.
-        </p>
-      <h3>Summer Student Finalist, Los Alamos National Laboratory, May 2022 — November 2022</h3>
-            <img src="assets/images/sc22.png" alt="Scientific Visualization Showcase 2022 Logo" width="250" height="130" align="left"/>
-        <img src="assets/images/sc21.png" alt="Scientific Visualization Showcase 2021 Logo" width="220" height="130" align="right"/> 
-        <p>
-          Implemented Visualization codes using ParaView and LANL developed simulations.
-          Produced cinema quality explanatory videos on the domain science explaining to a broad audience.
-          Presented & Paper Submission Finalist at The International Conference for High Performance Computing in Dallas, TX (2022) and St. Louis, MO (2021).
-        </p>
-  </section>
   
   <section id="awards">
     <h1>Publications and Awards</h1>
@@ -90,11 +145,42 @@
      <p> The International Conference for High Performance Computing: Scientific Visualization & Data Analytics Showcase, Finalist (2020). </p>
   </section>
 
+
+<section id="resume">
+    <h1>Selected Experience</h1>
+      <h2>Los Alamos National Laboratory, May 2023 — September 2023</h2>
+        <!--    <img src="assets/images/lanl_logo.png" alt="Lanl Logo" width="180" height="55" align="left"/> -->
+        <p>
+          Systematically determined bugs and installation issues of Accent on Linux VM and worked closely with developers to understand user-end software outcomes.
+          Leveraged git, BASH programming, Spack, and C++ API to integrate Ascent with LANL-developed physics simulation code.
+        </p>
+      <h2>MIT Undergraduate Research Program (UROP), MIT Anderson Lab</h2>
+       <!--     <img src="assets/images/mit_logo.png" alt="MIT Logo" width="200" height="85" align="left"/> -->
+        <p>
+          Supported Machine Learning algorithm for discovery of new molecular candidates for laboratory work.
+          Fully trained ML model using Pytorch and other relevant ML libraries for determining training/test data, cross-validation, and testing results.
+        </p>
+      <h2>Summer Student Finalist, Los Alamos National Laboratory, May 2022 — November 2022</h2>
+       <!--      <img src="assets/images/sc22.png" alt="Scientific Visualization Showcase 2022 Logo" width="250" height="130" align="left"/> -->
+      <!--   <img src="assets/images/sc21.png" alt="Scientific Visualization Showcase 2021 Logo" width="220" height="130" align="right"/>  -->
+        <p>
+          Implemented Visualization codes using ParaView and LANL developed simulations.
+          Produced cinema quality explanatory videos on the domain science explaining to a broad audience.
+          Presented & Paper Submission Finalist at The International Conference for High Performance Computing in Dallas, TX (2022) and St. Louis, MO (2021).
+        </p>
+  </section>
+ 
+
+  </div>
+</div>
+
   <footer>
     <p> Reach out to discuss research opportunities, collaboration, or advancements in computational techniques and scientific computing.<p>
     <p>Email: <a href="mailto:alexastew19@gmail.com">alexastew19@gmail.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/alexa-r-f/">https://www.linkedin.com/in/alexa-r-f/</a></p>
   </footer>
+
+
 
   <script src="js/script.js"></script>
 </body>
