--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ outlining details of recent advances towards determining a NS radius and discuss
 		<p class="boxedlarge"> Linux OS </p> 
  
 
-      <h3> Communication Skill</h3>  
+      <h3> Communication Skills</h3>  
 
 	<p class="boxedlarge"> Technical Writing </p>
 	<p class="boxedlarge"> Technical Presentation </p>
