--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ outlining details of recent advances towards determining a NS radius and discuss
 
   <section id="Selected skills" style="background-color:#DBECF3;font-size=16px">
  <h1 > Skills</h1>
-      <h3> Scientific Computing & Data Science Skills</h3>
+      <h3> Scientific Computing & Data Science</h3>
 
 		<p class="boxedlarge"> PyTorch </p> 
 		<p class="boxedlarge"> TensorFlow </p> 
@@ -70,7 +70,7 @@ outlining details of recent advances towards determining a NS radius and discuss
 		<p class="boxedlarge"> Linux OS </p> 
  
 
-      <h3> Communication Skills</h3>  
+      <h3> Communication</h3>  
 
 	<p class="boxedlarge"> Technical Writing </p>
 	<p class="boxedlarge"> Technical Presentation </p>
