--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						</p>
 					</div>
 					<div class="column" style="float:right; width:25%;">
-						<img src="assets/images/me.png" alt="Me" width="200" height="200" align="right" style="border-radius: 50%; border: 5px solid grey; " />
+						<img src="assets/images/me_casual.jpeg" alt="Me" width="200" height="200" align="right" style="border-radius: 50%; border: 5px solid grey; " />
 					</div>
 				</div>
 				<!-- I would love to discuss research opportunities, collaboration, or advancements in computational techniques and scientific computing. Some of my projects are listed below.  -->
