Update about me section

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 					developed a strong interest in Physics-Informed Machine Learning, data visualization, and
 					high-performance computing, all of which serve as critical tools in my research and academic pursuits.
 					I seek to explore the application of machine learning to scientific problems in physics, data analysis,
-					and predictive modeling, as well as particle-based simulations.
+					and predictive modeling.
 				</p>
 			</section>
 
