--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<p class="boxedlarge"> Spack </p>
 				<p class="boxedlarge"> ParaView </p>
 				<p class="boxedlarge"> C++ </p>
-				<p class="boxedlarge"> yt </p>
+				<p class="boxedlarge"> yt project </p>
 				<p class="boxedlarge"> Github/GitLab </p>
 				<p class="boxedlarge"> Pandas </p>
 				<p class="boxedlarge"> Web Scraping </p>
@@ -83,11 +83,11 @@
 			<header>
 				<div class="row" style="height: 100%">
 					<div class="column" style="width:75%; align-content:center; height:100%;">
-						<p style="margin-left: 20px; font-size:55px; text-align:left"> Alexandra Freeman </p>
+						<p style="margin-left: 20px; font-size:30px; text-align:left"> Alexandra Freeman </p>
 						<p style="margin-left: 20px; text-align: left">
-							<a href="mailto:alexastew19@gmail.com" style="color:#45B9A2;font-size:22px;">Email</a> |
-							<a href="https://www.linkedin.com/in/alexa-r-f/" style="color:#45B9A2;font-size:22px;">LinkedIn</a> |
-							<a href="https://github.com/astew-95" style="color:#45B9A2;font-size:22px;">Github</a>
+							<a href="mailto:alexastew19@gmail.com" style="color:black;font-size:17px;">Email</a> |
+							<a href="https://www.linkedin.com/in/alexa-r-f/" style="color:black;font-size:17px;">LinkedIn</a> |
+							<a href="https://github.com/astew-95" style="color:black;font-size:17px;">Github</a>
 						</p>
 					</div>
 					<div class="column" style="float:right; width:25%;">
