--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<p class="boxedlarge"> Spack </p>
 				<p class="boxedlarge"> ParaView </p>
 				<p class="boxedlarge"> C++ </p>
-				<p class="boxedlarge"> yt project </p>
+				<p class="boxedlarge"> yt </p>
 				<p class="boxedlarge"> Github/GitLab </p>
 				<p class="boxedlarge"> Pandas </p>
 				<p class="boxedlarge"> Web Scraping </p>
@@ -85,13 +85,13 @@
 					<div class="column" style="width:75%; align-content:center; height:100%;">
 						<p style="margin-left: 20px; font-size:30px; text-align:left"> Alexandra Freeman </p>
 						<p style="margin-left: 20px; text-align: left">
-							<a href="mailto:alexastew19@gmail.com" style="color:black;font-size:17px;">Email</a> |
-							<a href="https://www.linkedin.com/in/alexa-r-f/" style="color:black;font-size:17px;">LinkedIn</a> |
-							<a href="https://github.com/astew-95" style="color:black;font-size:17px;">Github</a>
+							<a href="mailto:alexastew19@gmail.com" style="color:blue;font-size:20px;">Email</a> |
+							<a href="https://www.linkedin.com/in/alexa-r-f/" style="color:blue;font-size:20px;">LinkedIn</a> |
+							<a href="https://github.com/astew-95" style="color:blue;font-size:20px;">Github</a>
 						</p>
 					</div>
 					<div class="column" style="float:right; width:25%;">
-						<img src="assets/images/me_casual.jpeg" alt="Me" width="200" height="200" align="right" style="border-radius: 50%; border: 5px solid grey; " />
+						<img src="assets/images/me_casual.png" alt="Me" width="200" height="200" align="right" style="border-radius: 50%; border: 5px solid grey; " />
 					</div>
 				</div>
 				<!-- I would love to discuss research opportunities, collaboration, or advancements in computational techniques and scientific computing. Some of my projects are listed below.  -->
@@ -105,15 +105,15 @@
 				<p> <i> M.S. in Computational Science and Engineering, GPA: 3.2/4.0 (Projected August 2025) </i> </p>
 				<p>
 					Relevant coursework: Computational Data Analytics, Numerical Linear Algebra, Modeling and Simulation,
-					Scientific Machine Learning, Machine Learning Data Analytics, Computational Physics.
+					Scientific Machine Learning, Machine Learning Theory, Computational Physics, High-Performance Computing, Quantum Mechanics, High-Energy Astrophysics.
 				</p>
 
 				<h2> Massachusetts Institute of Technology </h2>
 				<!--  <img src="assets/images/mit_logo.png" alt="MIT Logo" width="200" height="85" align="left"/>  -->
 				<p> <i> Bachelor of Science from the Department of Physics, 4.6/5.0 (Completed June 2022)</i>  </p>
 				<p>
-					Relevant coursework: Mathematics for Computer Science, Differential Equations, Linear Algebra, Python Programming and Fundamentals,
-					Introduction to Machine Learning, Fluid Dynamics, Statistical Physics, Quantum Mechanics I, Chemistry Thermodynamics, Laboratory Physics.
+					Relevant coursework: Mathematics for Computer Science, Differential Equations, Linear Algebra, Python Programming and Fundamentals (Programming Intensive),
+					Introduction to Machine Learning, Fluid Dynamics, Statistical Physics, Quantum Mechanics I, Chemistry Thermodynamics, Organic Chemistry, Introduction to Python, Laboratory Physics, Spanish III.
 				</p>
 			</section>
 			
