--- a/index.html
+++ b/index.html
@@ -85,13 +85,14 @@
 					<div class="column" style="width:75%; align-content:center; height:100%;">
 						<p style="margin-left: 20px; font-size:30px; text-align:left"> Alexandra Freeman </p>
 						<p style="margin-left: 20px; text-align: left">
-							<a href="mailto:alexastew19@gmail.com" style="color:blue;font-size:20px;">Email</a> |
-							<a href="https://www.linkedin.com/in/alexa-r-f/" style="color:blue;font-size:20px;">LinkedIn</a> |
-							<a href="https://github.com/astew-95" style="color:blue;font-size:20px;">Github</a>
+							<a href="mailto:alexastew19@gmail.com" style="color:lightgrey;font-size:17px;">Email</a> \\
+							<a href="https://www.linkedin.com/in/alexa-r-f/" style="color:lightgrey;font-size:17px;">LinkedIn</a> \\
+							<a href="https://github.com/astew-95" style="color:lightgrey;font-size:17px;">Github</a>
+							<a href="https://github.com/astew-95/astew-95.github.io/blob/main/assets/afreeman_resume_all.pdf" style="color:lightgrey;font-size:17px;">Resume</a>
 						</p>
 					</div>
 					<div class="column" style="float:right; width:25%;">
-						<img src="assets/images/me_casual.png" alt="Me" width="200" height="200" align="right" style="border-radius: 50%; border: 5px solid grey; " />
+						<img src="assets/images/me_casual.png" alt="Me" width="200" height="300" align="right" style="border-radius: 50%; border: 5px solid grey; " />
 					</div>
 				</div>
 				<!-- I would love to discuss research opportunities, collaboration, or advancements in computational techniques and scientific computing. Some of my projects are listed below.  -->
