fixed stretched photo

--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
 			<header>
 				<div class="row" style="height: 100%">
 					<div class="column" style="width:75%; align-content:center; height:100%;">
-						<p style="margin-left: 20px; font-size:30px; text-align:left"> Alexandra Freeman </p>
+						<p style="margin-left: 20px; font-size:35px; text-align:left"> Alexandra Freeman </p>
 						<p style="margin-left: 20px; text-align: left">
-							<a href="mailto:alexastew19@gmail.com" style="color:lightgrey;font-size:17px;">Email</a> \\
-							<a href="https://www.linkedin.com/in/alexa-r-f/" style="color:lightgrey;font-size:17px;">LinkedIn</a> \\
-							<a href="https://github.com/astew-95" style="color:lightgrey;font-size:17px;">Github</a>
-							<a href="https://github.com/astew-95/astew-95.github.io/blob/main/assets/afreeman_resume_all.pdf" style="color:lightgrey;font-size:17px;">Resume</a>
+							<p href="mailto:alexastew19@gmail.com" style="color:#ADD8E6;font-size:19px;">alexastew19@gmail.com</p> 
+							<p href="https://www.linkedin.com/in/alexa-r-f/" style="color:#ADD8E6;font-size:19px;">LinkedIn</p> 
+							<p href="https://github.com/astew-95" style="color:#ADD8E6;font-size:19px;">Github</p>
+							<p href="https://github.com/astew-95/astew-95.github.io/blob/main/assets/afreeman_resume_all.pdf" style="color:#ADD8E6;font-size:19px;">Resume</p>
 						</p>
 					</div>
 					<div class="column" style="float:right; width:25%;">
-						<img src="assets/images/me_casual.png" alt="Me" width="200" height="300" align="right" style="border-radius: 50%; border: 5px solid grey; " />
+						<img src="assets/images/me_casual.png" alt="Me" width="200" height="235" align="right" style="border-radius: 50%; border: 5px solid grey; " />
 					</div>
 				</div>
 				<!-- I would love to discuss research opportunities, collaboration, or advancements in computational techniques and scientific computing. Some of my projects are listed below.  -->
