attempt to fix links

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 					<div class="column" style="width:75%; align-content:center; height:100%;">
 						<p style="margin-left: 20px; font-size:35px; text-align:left"> Alexandra Freeman </p>
 						<p style="margin-left: 20px; text-align: left">
-							<p href="mailto:alexastew19@gmail.com" style="color:#ADD8E6;font-size:19px;">alexastew19@gmail.com</p> 
-							<p href="https://www.linkedin.com/in/alexa-r-f/" style="color:#ADD8E6;font-size:19px;">LinkedIn</p> 
-							<p href="https://github.com/astew-95" style="color:#ADD8E6;font-size:19px;">Github</p>
-							<p href="https://github.com/astew-95/astew-95.github.io/blob/main/assets/afreeman_resume_all.pdf" style="color:#ADD8E6;font-size:19px;">Resume</p>
+							<a href="mailto:alexastew19@gmail.com" style="color:lightblue;font-size:19px;">alexastew19@gmail.com</a> |
+							<a href="https://www.linkedin.com/in/alexa-r-f/" style="color:#ADD8E6;font-size:19px;">LinkedIn</a> |
+							<a href="https://github.com/astew-95" style="color:#ADD8E6;font-size:19px;">Github</a> |
+							<a href="https://github.com/astew-95/astew-95.github.io/blob/main/assets/afreeman_resume_all.pdf" style="color:lightblue;font-size:19px;">Resume</a>
 						</p>
 					</div>
 					<div class="column" style="float:right; width:25%;">
