--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<div class="row">
-		<div class="column left" style="width:34%; background-color:#A8B9BF;">
+		<div class="column left" style="width:34%; background-color:black;">
 			<section id="Selected skills" style="background-color: #DBECF3; font-size: 16px">
 				<h1> Skills </h1>
 				<h3> Scientific Computing & Data Science Skills </h3>
@@ -50,7 +50,7 @@
 				</p>
 				<center> <a href="https://github.com/astew-95/physical-style-transfer/tree/main" style="color:#094F74;"> Learn More </a> </center>
 
-				<h4> Multifidelity Modeling of Simplified SPH Simulation </h4>
+				<h4> Multifidelity Modeling of NS SPH (Smooth Particle Hydrodynamics) Simulation </h4>
 				<p style="font-size:22px">
 					My teammates and I propose a novel data-driven method leveraging Deep Learning to learn a
 					physically-meaningful latent space representing higher-order simulation effects through a
