--- a/index.html
+++ b/index.html
@@ -89,7 +89,12 @@
 				<p class="boxedlarge"> Pandas </p>
 				<p class="boxedlarge"> Jupyter </p>
 				<p class="boxedlarge"> Colab </p>
-				<p class="boxedlarge"> Linux </p>
+				<p class="boxedlarge"> NLP </p>
+				<p class="boxedlarge"> Deep Learning </p>
+				<p class="boxedlarge"> Naive Bayes </p>
+				<p class="boxedlarge"> LASSO </p>
+				<p class="boxedlarge"> PINNs </p>
+				<p class="boxedlarge"> SVMs </p>
 				<!--<h3> Communication Skills</h3>-->
 				<p class="boxedlarge"> Teaching </p>
 				<!-- <p class="boxedlarge"> Wet Lab </p>-->
