--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 				<h2> Georgia Institute of Technology </h2>
 					<!-- <img src="assets/images/gt_logo.png" alt="Georgia Tech Logo" width="170" height="80" align="left"/> -->
-					<p> <center>Masters in Computational Science and Engineering, GPA: 3.2/4.0 (Projected August 2025) </center> </p>
+					<p> <center>Masters in Computational Science and Engineering (Projected August 2025) </center> </p>
 					<p>
 						 <i> Relevant coursework: Computational Data Analytics, Numerical Linear Algebra, Modeling and Simulation,
 						Scientific Machine Learning, Machine Learning Theory, Computational Physics, High-Performance Computing, Quantum Mechanics, High-Energy Astrophysics.</i> 
