--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 	</div>
 	</div>
 	<footer>
-		<p> Reach out to discuss research opportunities, collaboration, or advancements in computational techniques and scientific computing.<p>
+		<p> Reach out to discuss advancements in scientific computing.<p>
 		<p>Email: <a href="mailto:alexastew19@gmail.com">alexastew19@gmail.com</a></p>
 		<p>LinkedIn: <a href="https://www.linkedin.com/in/alexa-r-f/">https://www.linkedin.com/in/alexa-r-f/</a></p>
 	</footer>
