--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
 
 			<p>
 <center><img src="assets/images/me_casual.png" alt="Me" width="150" height="175" align="center" style="border-radius: 0%; border: 2px solid grey; " /> </center><br />
-					I am a highly skilled researcher with a strong background in physics, computational
-					science, machine learning theory, and scientific computing seeking to leverage these tools for scientific discovery. I have
-					developed a strong interest in PINNs, data visualization, and
-					high-performance computing, all of which serve as critical tools in my research and academic pursuits.
-					I seek to explore the application of machine learning to scientific problems in predictive modeling in physics.
+					I am a skilled researcher with a strong background in physics, computational
+					science, machine learning theory, chemistry, and scientific computing seeking to leverage these tools for scientific discovery. I have
+					developed an interest in PINNs, data visualization, and
+					deep learning, all of which serve as critical tools in my research and academic pursuits.
+					I seek to explore the application of ML to scientific problems– from predictive modeling in physics to drug discovery.
 			</p>
 		</section>
 
@@ -185,7 +185,7 @@
 	</div>
 	</div>
 	<footer>
-		<p> Reach out to discuss advancements in scientific computing.<p>
+		<p> Reach out and I would love to discuss advancements in scientific computing.<p>
 		<p>Email: <a href="mailto:alexastew19@gmail.com">alexastew19@gmail.com</a></p>
 		<p>LinkedIn: <a href="https://www.linkedin.com/in/alexa-r-f/">https://www.linkedin.com/in/alexa-r-f/</a></p>
 	</footer>
