Re-include Dates

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 				<h2> Georgia Institute of Technology </h2>
 					<!-- <img src="assets/images/gt_logo.png" alt="Georgia Tech Logo" width="170" height="80" align="left"/> -->
-					<p> <center>Masters in Computational Science and Engineering </center> </p>
+					<p> <center>Masters in Computational Science and Engineering, August 2025 </center> </p>
 					<p>
 						 <i> Relevant coursework: Computational Data Analytics, Numerical Linear Algebra, Modeling and Simulation,
 						Scientific Machine Learning, Machine Learning Theory, Computational Physics, High-Performance Computing, Quantum Mechanics, High-Energy Astrophysics.</i> 
@@ -131,7 +131,7 @@
 
 				<h2> Massachusetts Institute of Technology </h2>
 					<!--  <img src="assets/images/mit_logo.png" alt="MIT Logo" width="200" height="85" align="left"/>  -->
-					<p> <center> Bachelors in Physics </center> </p>
+					<p> <center> Bachelors in Physics, June 2022 </center> </p>
 					<p>
 						<i> Relevant coursework: Mathematics for Computer Science, Differential Equations, Linear Algebra, Python Programming and 							Fundamentals (Programming Intensive), Introduction to Machine Learning, Fluid Dynamics, Statistical Physics, Quantum 							Mechanics I, Chemistry Thermodynamics, Organic Chemistry, Introduction to Python, Laboratory Physics, Spanish III.</i>
 					</p>
