--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
   <section id="hero">
     <h2>Computational Physics | Machine Learning | High Performance Computing </h2>
-    <p>Exploring science through math, equations, and data innovation.</p>
+    <p>Exploring science through data innovation.</p>
   </section>
 
   <section id="about">
     <h3>About Me</h3>
-    <p>I am a computational science graduate student passionate about applying model-informed machine learning to real-world problems in sustainability, mathematics, and fundamental physics. I value open research, scientific communication, and the pursuit of elegant solutions.</p>
+    <p>I am a computational science graduate student passionate about applying model-informed machine learning to real-world problems in data science, mathematics, and fundamental physics. I value open research, scientific communication, and the pursuit of elegant solutions.</p>
   </section>
 
   <section id="projects">
