--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
 
   <section id="hero">
-    <h2>Computational Physics | Machine Learning | High Performance Computing </h2>
+    <h2>Physics | Machine Learning | High Performance Computing </h2>
     <p>Exploring science through data innovation.</p>
   </section>
 
