--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
 
   <section id="hero">
-    <h2>Physics | Machine Learning | High Performance Computing </h2>
+    <h2>Data | Theory | Machine Learning  </h2>
     <p>Exploring science through data innovation.</p>
   </section>
 
@@ -51,6 +51,11 @@
       <h4>Machine Learning for Drug Discovery of Lipid Nanoparticles</h4>
       <p>Improved lab-developed PyTorch ML pipeline through evaluating model performance, implementing cross-validation, and enhancing code readability.</p>
     </div>
+  </section>
+
+  <section id="about">
+    <h3>Courses</h3>
+    
   </section>
 
   <section id="awards">
