--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <section id="about">
     <h3>About Me</h3>
-    <p>I am a computational science graduate student passionate about applying model-informed machine learning to real-world problems in data science, mathematics, and fundamental physics. I value open research, scientific communication, and the pursuit of elegant solutions.</p>
+    <p>I am a computational science graduate student passionate about applying model-informed machine learning to real-world problems in science and mathematics. I value open research, scientific communication, and the pursuit of intelligent solutions.</p>
   </section>
 
   <section id="projects">
