Update index.html with Skills

--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
   </section>
 
   <section id="about">
-    <h3>Courses</h3>
-    
+    <h3>Skills</h3>
+Machine Learning: PyTorch, CNNs, Support Vector Machines, TensorFlow, Ridge Regression, LASSO,
+Naive Bayes, Style Transfer, PINNs, NLP, LLM, Neural Networks, OpenMP, Slurm, HPC.
+Data Science / Visualization: Python, C++, Linux OS, BASH, Julia, Algorithm Development, Conda,
+Spack, MATLAB, R, Ascent, Paraview, yt Project, Jupyter, Colab, Pandas, NumPy, Matplotlib, Github.
+Communication: Teaching, Research, Scientific Visualization, Presentation and Organizational Skills.
   </section>
 
   <section id="awards">
