Update index.html with Skills formatting

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
     </div>
   </section>
 
-  <section id="about">
+  <section id="skills">
     <h3>Skills</h3>
-Machine Learning: PyTorch, CNNs, Support Vector Machines, TensorFlow, Ridge Regression, LASSO,
+<h4>Machine Learning:</h4> PyTorch, CNNs, Support Vector Machines, TensorFlow, Ridge Regression, LASSO,
 Naive Bayes, Style Transfer, PINNs, NLP, LLM, Neural Networks, OpenMP, Slurm, HPC.
-Data Science / Visualization: Python, C++, Linux OS, BASH, Julia, Algorithm Development, Conda,
+<h4>Data Science / Visualization:</h4> Python, C++, Linux OS, BASH, Julia, Algorithm Development, Conda,
 Spack, MATLAB, R, Ascent, Paraview, yt Project, Jupyter, Colab, Pandas, NumPy, Matplotlib, Github.
-Communication: Teaching, Research, Scientific Visualization, Presentation and Organizational Skills.
+<h4>Communication:</h4> Teaching, Research, Scientific Visualization, Presentation and Organizational Skills.
   </section>
 
   <section id="awards">
