Update index.html with skills

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
     <p>I am a computational science graduate student passionate about applying model-informed machine learning to real-world problems in science and mathematics. I value open research, scientific communication, and the pursuit of intelligent solutions.</p>
   </section>
 
+  <section id="skills">
+    <h3>Skills</h3>
+<h4>Machine Learning:</h4> PyTorch, CNNs, Support Vector Machines, TensorFlow, PINNs, Neural Networks, OpenMP, 
+    Slurm, HPC, Batch Processing, Web Scraping, Reinforcement Agents, Ridge Regression, LASSO, Naive Bayes, Style Transfer, 
+<h4>Data Science / Visualization:</h4> Python, C++, Linux OS, BASH Scripting, Julia, Conda/miniconda and
+Spack package managers, MATLAB, Paraview, yt Project, Jupyter Notebook, Google Colab, Ascent, Pandas, NumPy, Matplotlib, Github.
+<h4>Communication:</h4> Teaching, Research, Scientific Visualization, Presentation and Organizational Skills.
+  </section>
+
   <section id="projects">
     <h3>Projects</h3>
     <div class="project">
@@ -52,16 +61,7 @@
       <p>Improved lab-developed PyTorch ML pipeline through evaluating model performance, implementing cross-validation, and enhancing code readability.</p>
     </div>
   </section>
-
-  <section id="skills">
-    <h3>Skills</h3>
-<h4>Machine Learning:</h4> PyTorch, CNNs, Support Vector Machines, TensorFlow, Ridge Regression, LASSO,
-Naive Bayes, Style Transfer, PINNs, NLP, LLM, Neural Networks, OpenMP, Slurm, HPC.
-<h4>Data Science / Visualization:</h4> Python, C++, Linux OS, BASH, Julia, Algorithm Development, Conda,
-Spack, MATLAB, R, Ascent, Paraview, yt Project, Jupyter, Colab, Pandas, NumPy, Matplotlib, Github.
-<h4>Communication:</h4> Teaching, Research, Scientific Visualization, Presentation and Organizational Skills.
-  </section>
-
+  
   <section id="awards">
     <h3>Awards and Publications</h3>
     <div class="award">
