Fix image location

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
 
   <section id="hero">
-    <img src="images/assets/sml2.png" alt="Scientific ML" style="max-width: 200px; height: auto;" />
+    <img src="assets/images/sml2.png" alt="Scientific ML" style="max-width: 200px; height: auto;" />
     <h2>Data | Theory | Machine Learning  </h2>
     <p>Exploring science through data innovation.</p>
   </section>
