Slight change to Skills headers
Removed ":" for style purposes

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 
   <section id="skills">
     <h3>Skills</h3>
-<h4>Machine Learning:</h4> PyTorch, CNNs, Support Vector Machines, TensorFlow, PINNs, Neural Networks, OpenMP, 
+<h4>Machine Learning</h4> PyTorch, CNNs, Support Vector Machines, TensorFlow, PINNs, Neural Networks, OpenMP, 
     Slurm, HPC, Batch Processing, Web Scraping, Reinforcement Agents, Ridge Regression, LASSO, Naive Bayes, Style Transfer, 
-<h4>Data Science / Visualization:</h4> Python, C++, Linux OS, BASH Scripting, Julia, Conda/miniconda and
+<h4>Data Science / Visualization</h4> Python, C++, Linux OS, BASH Scripting, Julia, Conda/miniconda and
 Spack package managers, MATLAB, Paraview, yt Project, Jupyter Notebook, Google Colab, Ascent, Pandas, NumPy, Matplotlib, Github.
-<h4>Communication:</h4> Teaching, Research, Scientific Visualization, Presentation and Organizational Skills.
+<h4>Communication</h4> Teaching, Research, Scientific Visualization, Presentation and Organizational Skills.
   </section>
 
   <section id="projects">
