Change file link in resume.html

--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@
   <section>
     <h2>My Resume</h2>
     <p>You can view or download my resume below:</p>
-    <embed src="AFreeman_ResumeS25.pdf" type="application/pdf" width="100%" height="800px" />
+    <embed src="assets/afreeman_resume_all.pdf" type="application/pdf" width="100%" height="800px" />
   </section>
 
   <footer>
