--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <img src="assets/images/sml2.png" alt="Scientific ML" style="max-width: 200px; height: auto;" />
     <h2>Data | Theory | Machine Learning  </h2>
     <p>Exploring science through data innovation.</p>
+    <p> <a href="https://sc22.supercomputing.org/presentation/index-477.htm?post_type=page&p=3479&id=svs106&sess=sess280" target="_blank">Click HERE to view my presentation at SC 2022 International Conference for HPC Science Visualization Showcase</a></p>
   </section>
 
   <section id="about">
