--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@
 
   <section id="skills">
     <h3>Skills</h3>
+<h4>Physics</h4> Computational Physics, Numerical Methods, Physics-Informed Neural Networks (PINNs), Smooth-Particle Hydrodynamics (SPH),
+    Quantum Mechanics, Radiation Hydrodynamics, Statistical Mechanics, Fluid Dynamics, Classical Mechanics, Electromagnetism, 
+    Computational Fluid Dynamics (CFD), Cosmological Simulations, Scientific Visualization, In-situ Analysis, Data-Driven Modeling.
 <h4>Machine Learning</h4> PyTorch, CNNs, Support Vector Machines, TensorFlow, PINNs, Neural Networks, OpenMP, 
-    Slurm, HPC, Batch Processing, Web Scraping, Reinforcement Agents, Ridge Regression, LASSO, Naive Bayes, Style Transfer, 
-<h4>Data Science / Visualization</h4> Python, C++, Linux OS, BASH Scripting, Julia, Conda/miniconda and
+    Slurm, HPC, Batch Processing, Web Scraping, Reinforcement Agents, Ridge Regression, LASSO, Naive Bayes, Style Transfer.
+<h4>Data Science / Visualization</h4> Python, C++,  Parallel Processing, Linux OS, BASH Scripting, Julia, Conda/miniconda and
 Spack package managers, MATLAB, Paraview, yt Project, Jupyter Notebook, Google Colab, Ascent, Pandas, NumPy, Matplotlib, Github.
 <h4>Communication</h4> Teaching, Research, Scientific Visualization, Presentation and Organizational Skills.
   </section>
