--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
   </header>
 
   <section id="hero">
-    <img src="assets/images/me.png" alt="Hello!" style="max-width: 200px; height: auto;" />
+    <img src="assets/images/me.png" alt="Hello!" style="max-width: 350px; height: auto;" />
     <h2>Data | Theory | Machine Learning  </h2>
-    <p>Exploring science through data innovation.</p>
+    <p>I am a computational science graduate student passionate about applying model-informed machine learning to real-world problems in science and mathematics.</p>
     <p> <a href="https://sc22.supercomputing.org/presentation/index-477.htm?post_type=page&p=3479&id=svs106&sess=sess280" target="_blank">Click HERE to view my presentation at SC 2022 International Conference for HPC Science Visualization Showcase</a></p>
   </section>
 
   <section id="about">
-    <h3>I am a computational science graduate student passionate about applying model-informed machine learning to real-world problems in science and mathematics.</h3>
-  <p> Hi!</p>
+    <h3>Hello!</h3>
+  <p></p>
 
-<p>My name is Alexa and I am a recent graduate in Computational Science with an undergraduate degree in physics from MIT.  I come from a family of New England scientists– my dad was a biology major and my mom is a STEM teacher, both of whom fostered a love of science in me at a young age. I explored a variety of courses in my undergraduate studies before switching to physics as my primary major, courses in the fields of both Chemistry/Chemical Engineering and Computer science fields. To my slgiht dismay, I did not take enough to be awarded a minor in Computer Science (I was one course short).  I was fascinated with the possibility of harnessing compute to advance science fields, and I felt that my interdisciplinary interest could not be conveyed in a single major. I decided on physics due to my intense curiosity for math, theory, and harnessing theoretical dynamics which underpin other fields. I fell in love with J-Lab, the research-intensive 12-unit physics course at MIT, one which many of my peers dreaded. In my free time I sing, compose, play piano, and read.</p>
+<p> My name is Alexa and I am a recent graduate in Computational Science with an undergraduate degree in physics from MIT.  I explored a variety of courses in my undergraduate studies before switching to physics as my primary major, courses in the fields of both Chemistry/Chemical Engineering and Computer science fields. I was fascinated with the possibility of harnessing compute to advance science fields, and I decided on physics due to my intense curiosity for math, theory, and harnessing theoretical dynamics– which underpin other fields. I fell in love with <a href="https://web.mit.edu/8.13/www/index.shtml" target="_blank"> J-Lab, the research-intensive 12-unit physics course at MIT</a>, a class which many of my peers dreaded.</p>
 
-<p>My interest in Machine Learning and computational techniques led me to pursue a masters in Computational Science and Engineering at Georgia Tech. Serving as a teaching assistant, I taught physics courses and tutored students as well as participated in Georgia Tech's Chamber Chorus. </p>
+<p>My interest in Machine Learning and computational techniques led me to pursue a masters in Computational Science and Engineering at Georgia Tech. Serving as a teaching assistant, I taught physics courses and tutored students as well as participated in Georgia Tech's Chamber Chorus. In my free time I sing, compose, play piano, and volunteer.</p>
   
   
   </section>
