--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <section id="hero">
     <img src="assets/images/me.png" alt="Hello!" style="max-width: 350px; height: auto;" />
-    <h2>Data | Theory | Machine Learning  </h2>
+    <h2>Science | Theory | Machine Learning  </h2>
     <p>I am a computational science graduate student passionate about applying model-informed machine learning to real-world problems in science and mathematics.</p>
     <p> <a href="https://sc22.supercomputing.org/presentation/index-477.htm?post_type=page&p=3479&id=svs106&sess=sess280" target="_blank">Click HERE to view my presentation at SC 2022 International Conference for HPC Science Visualization Showcase</a></p>
   </section>
